--- a/project.config.json
+++ b/project.config.json
@@ -13,7 +13,7 @@
 	"compileType": "miniprogram",
 	"libVersion": "2.2.2",
 	"appid": "wx40c603a025e62589",
-	"projectname": "%E5%BF%AB%E4%B9%90%E7%9A%84%E4%BC%9F%E5%85%83",
+	"projectname": "kuailedeweiyuan",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
